corrigindo caminho imagens

--- a/public/index.html
+++ b/public/index.html
@@ -62,12 +62,12 @@
     <main>
         <div class="column">
             <h2>Saiba mais</h2>
-            <img src="besouro_molitor.jpg" alt="Besouro Molitor">
+            <img src="images/besouro_molitor.jpg" alt="Besouro Molitor">
         </div>
 
         <div class="column">
             <h2>Participar de pesquisa</h2>
-            <img src="formulario_pesquisa.jpg" alt="Formulário de Pesquisa">
+            <img src="images/formulario_pesquisa.jpg" alt="Formulário de Pesquisa">
             <button onclick="window.location.href='formulario.html'">Participar</button>
         </div>
     </main>
