colunas centralizadas e bordas adicionadas

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,11 +21,17 @@
 
         main {
             display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         .column {
             flex: 1;
             padding: 20px;
+            border: 1px solid #ddd; /* Adiciona uma borda fina */
+            margin: 10px;
+            background-color: #fff; /* Adiciona uma cor de fundo para destacar as colunas */
         }
 
         h2 {
