--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
         .column {
             flex: 1;
             padding: 20px;
-            border: 1px solid #ddd; /* Adiciona uma borda fina */
+            border: 1px solid #ddd;
             margin: 10px;
-            background-color: #fff; /* Adiciona uma cor de fundo para destacar as colunas */
+            background-color: #fff;
+            text-align: center;
         }
 
         h2 {
@@ -42,13 +43,14 @@
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 10px 0;
+            margin: 10px auto; /* Centraliza a imagem horizontalmente */
         }
 
         button {
             background-color: #4CAF50;
             color: #fff;
-            padding: 10px 15px;
+            padding: 10px 0; /* Ajusta o preenchimento do botão */
+            width: 100%; /* Faz com que o botão ocupe 100% da largura da coluna */
             border: none;
             border-radius: 5px;
             cursor: pointer;
