Adicionado botão Saiba mais e criado página base

--- a/public/index.html
+++ b/public/index.html
@@ -71,12 +71,13 @@
         <div class="column">
             <h2>Saiba mais</h2>
             <img src="images/saiba_mais.png" alt="Besouro Molitor">
+            <button onclick="window.location.href='saiba_mais.html'">Saiba Mais!</button>
         </div>
 
         <div class="column">
             <h2>Participar de pesquisa</h2>
             <img src="images/formulario_pesquisa.png" alt="Formulário de Pesquisa">
-            <button onclick="window.location.href='formulario.html'">Participar</button>
+            <button onclick="window.location.href='formulario.html'">Participar da pesquisa</button>
         </div>
     </main>
 
