--- a/public/404.html
+++ b/public/404.html
@@ -39,11 +39,11 @@
             color: #333;
         }
 
-        video {
+        img {
             max-width: 100%;
             height: auto;
             display: block;
-            margin: 10px auto; /* Centraliza o vídeo horizontalmente */
+            margin: 10px auto; /* Centraliza a imagem horizontalmente */
         }
 
         p {
@@ -74,10 +74,7 @@
     <main>
         <div class="column">
             <h2>Oops!</h2>
-            <video controls>
-                <source src="videos/404.mp4" type="video/mp4">
-                Seu navegador não suporta o elemento de vídeo.
-            </video>
+            <img src="images/404.gif" alt="Erro 404">
             <p>A página que você está procurando não foi encontrada.</p>
             <button onclick="window.location.href='index.html'">Voltar para a Home</button>
         </div>
