--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
             color: #fff;
             text-align: center;
             padding: 10px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
         }
 
         main {
@@ -24,6 +28,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin-top: 60px; /* Ajusta o espaço abaixo do cabeçalho */
         }
 
         .column {
