--- a/public/404.html
+++ b/public/404.html
@@ -17,6 +17,10 @@
             color: #fff;
             text-align: center;
             padding: 10px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
         }
 
         main {
