--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Página não encontrada</title>
+    <title>The Scandelari Farm CO</title>
     <style>
         body {
             margin: 0;
@@ -72,7 +72,7 @@
 <body>
 
     <header>
-        <h1>404 - Página não encontrada</h1>
+        <h1>The Scandelari Farm CO</h1>
     </header>
 
     <main>
