--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Scandelari Farm CO</title>
+    <title>404 - The Scandelari Farm CO</title>
     <style>
         body {
             margin: 0;
