--- a/public/ga.html
+++ b/public/ga.html
@@ -79,7 +79,7 @@
         <div class="column">
             <h2>GATAAAA!</h2>
             <img src="images/GA.png" alt="Amanda e Guilherme">
-            <p>Pensa num casãl lindo!!!</p>
+            <p>Pensa num casal lindo!!!</p>
             <button onclick="window.location.href='index.html'">Voltar para a Home</button>
         </div>
     </main>
