teste deploy automático

--- a/public/ga.html
+++ b/public/ga.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -77,7 +77,7 @@
 
     <main>
         <div class="column">
-            <h2>GATAAAA!</h2>
+            <h2>Família!</h2>
             <img src="images/GA.png" alt="Amanda e Guilherme">
             <p>Pensa num casal lindo!!!</p>
             <button onclick="window.location.href='index.html'">Voltar para a Home</button>
