--- a/public/formulario.html
+++ b/public/formulario.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário - The Scandelari Farm CO</title>
+    <title>Formulï¿½rio - The Scandelari Farm CO</title>
     <style>
         body {
             margin: 0;
@@ -24,7 +24,7 @@
         }
 
         main {
-            margin-top: 60px; /* Ajusta o espaço abaixo do cabeçalho */
+            margin-top: 60px; /* Ajusta o espaï¿½o abaixo do cabeï¿½alho */
             padding: 20px;
         }
     </style>
@@ -36,9 +36,9 @@
     </header>
 
     <main>
-        <!-- Conteúdo do formulário pode ser adicionado aqui -->
-        <h2>Formulário</h2>
-        <!-- Adicione o seu conteúdo do formulário aqui -->
+        <!-- Conteï¿½do do formulï¿½rio pode ser adicionado aqui -->
+        <h2>Formulï¿½rio</h2>
+        <!-- Adicione o seu conteï¿½do do formulï¿½rio aqui -->
     </main>
 
 </body>
