--- a/public/saiba_mais.html
+++ b/public/saiba_mais.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
         }
 
         main {
-            margin-top: 60px; /* Ajusta o espaço abaixo do cabeçalho */
+            margin-top: 60px; /* Ajusta o espaï¿½o abaixo do cabeï¿½alho */
             padding: 20px;
         }
     </style>
@@ -36,9 +36,9 @@
     </header>
 
     <main>
-        <!-- Conteúdo da página Saiba Mais pode ser adicionado aqui -->
+        <!-- Conteï¿½do da pï¿½gina Saiba Mais pode ser adicionado aqui -->
         <h2>Saiba mais</h2>
-        <!-- Adicione o seu conteúdo aqui -->
+        <!-- Adicione o seu conteï¿½do aqui -->
     </main>
 
 </body>
